# MathLib

./: CMakeLists.txt  MathLib.dsp  MathLib.dsw  Matrix.cpp  README.md  Vector.cpp  Wiskunde.cpp  mathlib.cpp  mathlib.h  stdafx.cpp  stdafx.h
